# QuadrupedWholeBodyController

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  params.yaml  params_controller.yaml  params_planner.yaml
config/rviz/: controller.rviz
include/: MotionPlanner.h  ReferencePublisher.h  WholeBodyController.h  sliderGui.h
include/anymal_wbc/: MotionPlanner.hpp  WholeBodyController.hpp  motion_planner.hpp  whole_body_controller.hpp
launch/: cylinders.launch  load.launch  spawn.launch  spawn_cylinders.launch  spawn_wall.launch  standalone.launch  wall.launch  wholeBodyController.launch  wholeBodyControllerRviz.launch  wholeBodyControllerWithRefs.launch  whole_body_controller.launch  whole_body_controller_cylinders.launch  whole_body_controller_wall.launch
msg/: WbcReferenceMsg.msg
scripts/: plot_bag.py
src/: MotionPlanner.cpp  ReferencePublisher.cpp  WholeBodyController.cpp  WholeBodyControllerNode.cpp  jointCmdPublisher.cpp  main.cpp  marker_publisher.cpp  motion_planner.cpp  motion_planner_node.cpp  sliderGui.cpp  sliderPublisher.cpp  teleop_gui_node.cpp  wholeBodyControllerNode.cpp  whole_body_controller.cpp  whole_body_controller_node.cpp
urdf/: anymal.urdf  anymal_stick.urdf  cylinders.world  wall.world
urdf/planner_references/: body_reference.urdf  foot_reference.urdf
