<?xml version="1.0"?>
<package format="2">
  <name>anymal_wbc</name>
  <version>0.0.0</version>
  <description>This package implements a whole body controller for ANYmal D</description>

  <maintainer email="michele.avagnale@unina.it">mavagnale</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>qpOASES</depend>
  <depend>idyntree</depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  
  <export>
  </export>
</package>
